community-docs/v0.9/modules/ROOT/pages/explanations/ref-bundle-stages.adoc
= Bundle Lifecycle
:revdate: 2025-04-30
:page-revdate: {revdate}

A bundle is an internal resource used for the orchestration of resources from git. When a GitRepo is scanned it will produce one or more bundles.

To demonstrate the life cycle of a {product_name} bundle, we will use https://github.com/rancher/fleet-examples/tree/master/multi-cluster/helm[multi-cluster/helm] as a case study.

. User will create a xref:how-tos-for-users/gitrepo-add.adoc#_create_gitrepo_instance[GitRepo] that points to the multi-cluster/helm repository.
. The `gitjob-controller` will sync changes from the GitRepo and detect changes from the polling or xref:how-tos-for-users/webhook.adoc[webhook event]. With every commit change, the `gitjob-controller` will create a job that clones the git repository, reads content from the repo such as `fleet.yaml` and other manifests, and creates the {product_name} xref:reference/ref-status-fields.adoc#_bundles[bundle].

NOTE: The job pod with the image name `rancher/tekton-utils` will be under the same namespace as the GitRepo.

. The `fleet-controller` then syncs changes from the bundle. According to the targets, the `fleet-controller` will create `BundleDeployment` resources, which are a combination of a bundle and a target cluster.
. The `fleet-agent` will then pull the `BundleDeployment` from the {product_name} controlplane. The agent deploys bundle manifests as a https://helm.sh/docs/intro/install/[Helm chart] from the `BundleDeployment` into the downstream clusters.
. The `fleet-agent` will continue to monitor the application bundle and report statuses back in the following order: bundledeployment > bundle > GitRepo > cluster.

This diagram shows the different rendering stages a bundle goes through until deployment.

image::FleetBundleStages.svg[Bundle Stages]
